welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: not found: type i
  T[i]==getCouleurSol():Color
    ^Array1:5: error: variable T of type Array[java.awt.Color] does not take type parameters.
  T[i]==getCouleurSol():Color
   ^